<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingVertical="30dp"
    android:paddingHorizontal="20dp"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/detail_image"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            tools:src= "@tools:sample/avatars"
            tools:ignore="ContentDescription"
            android:layout_marginBottom="30dp"/>

        <TextView
            android:id="@+id/detail_category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_category"
            />

        <TextView
            android:id="@+id/detail_food_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/food_name"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_marginVertical="5dp"
            />

        <TextView
            android:id="@+id/detail_food_calorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/food_calorie"
            android:layout_marginBottom="20dp"
            />



        <TextView
            android:id="@+id/detail_food_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            tools:text="@string/food_description"
            android:justificationMode="inter_word"
            />

        <Button
            android:id="@+id/action_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/share"/>

    </LinearLayout>

</ScrollView>